# inkbase

./: CLAUDE.md  Cargo.toml  PLAN.md  README.md  start.sh
crates/inkbase-api/: Cargo.toml
crates/inkbase-api/src/: handlers.rs  lib.rs  openapi.rs  state.rs
crates/inkbase-core/: Cargo.toml
crates/inkbase-core/src/: config.rs  error.rs  lib.rs
crates/inkbase-embedding/: Cargo.toml
crates/inkbase-embedding/benches/: embedding_bench.rs
crates/inkbase-embedding/src/: ollama.rs  openai.rs  pipeline.rs  provider.rs  tfidf.rs
crates/inkbase-graph/: Cargo.toml
crates/inkbase-graph/src/: graph.rs  lib.rs  types.rs
crates/inkbase-index/: Cargo.toml
crates/inkbase-index/src/: search.rs  vector.rs
crates/inkbase-integration-tests/: Cargo.toml
crates/inkbase-integration-tests/tests/: end_to_end.rs
crates/inkbase-mcp/: Cargo.toml
crates/inkbase-mcp/src/: lib.rs  service.rs
crates/inkbase-parser/: Cargo.toml
crates/inkbase-parser/benches/: parser_bench.rs
crates/inkbase-parser/src/: frontmatter.rs  lib.rs  parser.rs
crates/inkbase-query/: Cargo.toml
crates/inkbase-query/src/: parser.rs
crates/inkbase-server/: Cargo.toml
crates/inkbase-server/src/: main.rs
crates/inkbase-storage/: Cargo.toml
crates/inkbase-storage/benches/: storage_bench.rs
crates/inkbase-storage/src/: lib.rs  sled_storage.rs  traits.rs
crates/inkbase-storage/src/engine/: btree.rs  buffer_pool.rs  header.rs  mod.rs  mvcc.rs  storage_engine.rs  wal.rs
crates/mdbase-api/: Cargo.toml
crates/mdbase-api/src/: handlers.rs  lib.rs  openapi.rs  router.rs  state.rs
crates/mdbase-core/: Cargo.toml
crates/mdbase-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/mdbase-embedding/: Cargo.toml
crates/mdbase-embedding/benches/: embedding_bench.rs
crates/mdbase-embedding/src/: lib.rs  ollama.rs  openai.rs  pipeline.rs  provider.rs  tfidf.rs
crates/mdbase-graph/: Cargo.toml
crates/mdbase-graph/src/: graph.rs  types.rs
crates/mdbase-index/: Cargo.toml
crates/mdbase-index/src/: lib.rs  search.rs  types.rs  vector.rs  vector_types.rs
crates/mdbase-integration-tests/: Cargo.toml
crates/mdbase-integration-tests/src/: lib.rs
crates/mdbase-integration-tests/tests/: end_to_end.rs
crates/mdbase-mcp/: Cargo.toml
crates/mdbase-mcp/src/: lib.rs  service.rs
crates/mdbase-parser/: Cargo.toml
crates/mdbase-parser/benches/: parser_bench.rs
crates/mdbase-parser/src/: frontmatter.rs  parser.rs
crates/mdbase-query/: Cargo.toml
crates/mdbase-query/src/: ast.rs  error.rs  lib.rs  mql.pest
crates/mdbase-server/: Cargo.toml
crates/mdbase-server/src/: main.rs
crates/mdbase-storage/: Cargo.toml
crates/mdbase-storage/benches/: storage_bench.rs
crates/mdbase-storage/src/: sled_storage.rs  traits.rs
crates/mdbase-storage/src/engine/: btree.rs  buffer_pool.rs  header.rs  mvcc.rs  page.rs  storage_engine.rs  wal.rs
