[workspace]
resolver = "2"
members = [
    "crates/mdbase-core",
    "crates/mdbase-parser",
    "crates/mdbase-storage",
    "crates/mdbase-index",
    "crates/mdbase-graph",
    "crates/mdbase-embedding",
    "crates/mdbase-query",
    "crates/mdbase-mcp",
    "crates/mdbase-api",
    "crates/mdbase-server",
    "crates/mdbase-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown parsing
comrak = { version = "0.36", default-features = false }

# Query language
pest = "2"
pest_derive = "2"

# Storage (Phase 1 temporary)
sled = "0.34"

# Full-text search
tantivy = "0.22"

# Vector index
ordered-float = "4"
parking_lot = "0.12"

# Graph
petgraph = "0.7"

# MCP protocol
rmcp = { version = "0.3", features = ["server", "transport-io", "transport-streamable-http-server", "transport-worker"] }
schemars = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# HTTP framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
blake3 = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
mdbase-core = { path = "crates/mdbase-core" }
mdbase-parser = { path = "crates/mdbase-parser" }
mdbase-storage = { path = "crates/mdbase-storage" }
mdbase-index = { path = "crates/mdbase-index" }
mdbase-graph = { path = "crates/mdbase-graph" }
mdbase-embedding = { path = "crates/mdbase-embedding" }
mdbase-query = { path = "crates/mdbase-query" }
mdbase-mcp = { path = "crates/mdbase-mcp" }
mdbase-api = { path = "crates/mdbase-api" }
mdbase-server = { path = "crates/mdbase-server" }
