[workspace]
resolver = "2"
members = [
    "crates/inkbase-core",
    "crates/inkbase-parser",
    "crates/inkbase-storage",
    "crates/inkbase-index",
    "crates/inkbase-graph",
    "crates/inkbase-embedding",
    "crates/inkbase-query",
    "crates/inkbase-mcp",
    "crates/inkbase-api",
    "crates/inkbase-server",
    "crates/inkbase-integration-tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Markdown parsing
comrak = { version = "0.36", default-features = false }

# Query language
pest = "2"
pest_derive = "2"

# Storage (Phase 1 temporary)
sled = "0.34"

# Full-text search
tantivy = "0.22"

# Vector index
ordered-float = "4"
parking_lot = "0.12"

# Graph
petgraph = "0.7"

# MCP protocol
rmcp = { version = "0.3", features = ["server", "transport-io", "transport-streamable-http-server", "transport-worker"] }
schemars = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# HTTP framework
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# API documentation
utoipa = { version = "5", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing
blake3 = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crates
inkbase-core = { path = "crates/inkbase-core" }
inkbase-parser = { path = "crates/inkbase-parser" }
inkbase-storage = { path = "crates/inkbase-storage" }
inkbase-index = { path = "crates/inkbase-index" }
inkbase-graph = { path = "crates/inkbase-graph" }
inkbase-embedding = { path = "crates/inkbase-embedding" }
inkbase-query = { path = "crates/inkbase-query" }
inkbase-mcp = { path = "crates/inkbase-mcp" }
inkbase-api = { path = "crates/inkbase-api" }
inkbase-server = { path = "crates/inkbase-server" }
