[package]
name = "inkbase-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inkbase-core.workspace = true
tantivy.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
ordered-float.workspace = true
utoipa.workspace = true

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
