[package]
name = "inkbase-query"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
inkbase-core = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
