[package]
name = "inkbase-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage engine for Inkbase — trait abstraction with sled-backed implementation"

[dependencies]
inkbase-core = { workspace = true }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "storage_bench"
harness = false
