[package]
name = "mdbase-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST API for Markdotabase using axum"

[dependencies]
mdbase-core.workspace = true
mdbase-parser.workspace = true
mdbase-storage.workspace = true
mdbase-index.workspace = true
mdbase-graph.workspace = true
mdbase-embedding.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
