[package]
name = "mdbase-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types, error handling, and configuration for Markdotabase"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
utoipa = { workspace = true }
