[package]
name = "mdbase-embedding"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Embedding pipeline for Markdotabase semantic search"

[dependencies]
mdbase-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
uuid = { workspace = true }
mdbase-index = { workspace = true }

[[bench]]
name = "embedding_bench"
harness = false
