[package]
name = "mdbase-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "In-memory knowledge graph for Markdotabase link navigation"

[dependencies]
mdbase-core = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
