[package]
name = "mdbase-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server for Markdotabase — exposes document storage and query tools to AI agents"

[dependencies]
mdbase-core.workspace = true
mdbase-parser.workspace = true
mdbase-storage.workspace = true
mdbase-index.workspace = true
mdbase-graph.workspace = true
mdbase-embedding.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
anyhow.workspace = true
