[package]
name = "mdbase-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Markdown parsing, frontmatter extraction, and link detection for Markdotabase"

[dependencies]
mdbase-core.workspace = true
comrak.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
blake3.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "parser_bench"
harness = false
