[package]
name = "mdbase-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "markdotabase"
path = "src/main.rs"

[dependencies]
mdbase-core.workspace = true
mdbase-parser.workspace = true
mdbase-storage.workspace = true
mdbase-index.workspace = true
mdbase-graph.workspace = true
mdbase-embedding.workspace = true
mdbase-mcp.workspace = true
mdbase-api.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
